cập nhật module Product

--- a/frontend/src/components/ProductDetails/ProductGallery/ProductGallery.css
+++ b/frontend/src/components/ProductDetails/ProductGallery/ProductGallery.css
@@ -10,7 +10,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100% !important;
 }
 
 .product-images-slider .swiper-button-prev {
@@ -45,5 +45,5 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100% !important;
 }
