--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -100,7 +100,7 @@
 
 /* ==== Dropdown cấp 2 ==== */
 .sub-dropdown {
-  text-decoration: ;
+  text-decoration: none;
   position: absolute;
   top: 0;
   left: 100%;
