--- a/frontend/src/components/ProductCard/ProductCard.css
+++ b/frontend/src/components/ProductCard/ProductCard.css
@@ -7,7 +7,9 @@
   padding: 10px; 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); 
 }
-
+.product-card:hover{
+  cursor: pointer;
+}
 .product-image-container {
   width: 100%;
   height: 300px; 
