--- a/frontend/src/components/ProductGrid/ProductGrid.css
+++ b/frontend/src/components/ProductGrid/ProductGrid.css
@@ -178,15 +178,15 @@
 /* ProductGrid.css */
 .product-grid-container {
   width: 100%;
-  max-width: 1200px; 
+  /* max-width: 1200px;  */
   margin: 0 auto; 
-  padding: 0px 80px;
+  /* padding: 0px 80px; */
 }
 .product-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr); 
   gap: 20px; 
-  padding: 20px 140px;
+  /* padding: 20px 140px; */
 }
 
 
