--- a/frontend/src/components/ProductCard/ProductCard.css
+++ b/frontend/src/components/ProductCard/ProductCard.css
@@ -1,18 +1,20 @@
 .product-card {
-  width: 250px; 
-  border: 1px solid #eee; 
-  border-radius: 8px; 
-  overflow: hidden; 
+  /* width: 250px; */
+  border: 1px solid #eee;
+  border-radius: 8px;
+  overflow: hidden;
   font-family: Arial, sans-serif;
-  padding: 10px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05); 
+  padding: 10px 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
 }
-.product-card:hover{
+
+.product-card:hover {
   cursor: pointer;
 }
+
 .product-image-container {
   width: 100%;
-  height: 300px; 
+  height: 300px;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -26,8 +28,11 @@
   display: block;
 }
 
-.product-details {
-  padding: 0 5px;
+.product-card-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .product-title {
@@ -56,14 +61,16 @@
 .old-price {
   font-size: 14px;
   color: #999;
-  text-decoration: line-through; 
+  text-decoration: line-through;
   font-weight: 400;
 }
 
 .review-and-action-section {
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
+  width: -webkit-fill-available;
+  padding: 0 20px;
 }
 
 .rating-section {
@@ -80,7 +87,7 @@
 
 .star-icons {
   display: flex;
-  font-size: 14px; 
+  font-size: 14px;
 }
 
 .star-filled {
@@ -88,11 +95,11 @@
 }
 
 .star-empty {
-  color: #ccc; 
+  color: #ccc;
 }
 
 .add-to-cart-button {
-  background-color: transparent; 
+  background-color: transparent;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -104,15 +111,15 @@
 }
 
 .add-to-cart-button:hover {
-  background-color: #000; 
+  background-color: #000;
   border-color: #000;
 }
 
 .add-to-cart-button:hover .cart-icon {
-  color: white; 
+  color: white;
 }
 
 .cart-icon {
-  font-size: 20px; 
-  color: #333; 
+  font-size: 20px;
+  color: #333;
 }
