--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -26,13 +26,14 @@
   width: 100%;
 }
 
-.menu-item {
+.menu-item2 {
   position: relative;
   display: flex;
   flex-direction: column;
   height: 60px;
-
   flex: 1 1 50px;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 .menu-text {
@@ -43,6 +44,7 @@
   border-bottom: 2px solid transparent;
   transition: all 0.3s ease;
   text-decoration: none; 
+  margin-top: 15px;
 }
 
 .menu-text:hover,
@@ -54,7 +56,7 @@
 /* ==== Dropdown cấp 1 ==== */
 .dropdown {
   position:absolute;
-  top: 80%;
+  top: 50% !important;
   left: 0;
   background: #555;
   color: #fff;
@@ -76,7 +78,7 @@
 }
 
 /* Giữ hover mượt khi rê chuột */
-.menu-item::after {
+.menu-item2::after {
   content: "";
   position: absolute;
   top: 100%;
@@ -87,7 +89,7 @@
 }
 
 /* Hover vào menu hoặc dropdown */
-.menu-item:hover .dropdown,
+.menu-item2:hover .dropdown,
 .dropdown:hover {
   opacity: 1;
   transform: translateY(0);
