--- a/frontend/src/components/Header/MobileHeader.css
+++ b/frontend/src/components/Header/MobileHeader.css
@@ -61,13 +61,13 @@
 }
 
 /* ==== Menu List ==== */
-.menu-list {
+.menu-list1 {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-.menu-item {
+.menu-item1 {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -79,14 +79,16 @@
   text-decoration: none;
 }
 
-.menu-item:hover {
-  color: #f57716;
+.menu-item1:hover a,
+.menu-item1:hover {
+  color: #f57716 !important;
 }
 
-.menu-item.active {
-  color: #ff4d00;
-  font-weight: bold;
+.menu-item1 a {
+  text-decoration: none !important;
+  color: #fff !important;
 }
+
 /* ==== Submenu cấp 1 ==== */
 .submenu {
   list-style: none;
@@ -146,6 +148,9 @@
   color: #f57716;
 }
 
+.mobile-icons {
+  display: flex !important;
+}
 /* ==== CART ==== */
 .cart {
   position: relative;
