--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #f1f1f1;
+  background: #efefef !important;
   /* padding: 16px 40px; */
   box-shadow: 0 2px 4px rgba(0,0,0,0.05);
   font-family: Arial, sans-serif;
