--- a/frontend/src/components/ProductCard/ProductCard.css
+++ b/frontend/src/components/ProductCard/ProductCard.css
@@ -10,9 +10,7 @@
   transition: transform 0.2s, box-shadow 0.2s;
   background-color: white;
 }
-  padding: 10px 0;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-}
+
 
 .product-card:hover {
   cursor: pointer;
@@ -24,7 +22,7 @@
   width: 100%;
   padding-top: 100%; 
   position: relative;
-  height: 300px;
+  height: 250px;
   overflow: hidden;
   margin-bottom: 10px;
 }
@@ -47,8 +45,8 @@
 .product-card-details {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  text-align: left;
+  padding: 5px 10px;
 
 }
 
@@ -61,6 +59,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: left;
 }
 
 
@@ -92,7 +91,6 @@
   align-items: center;
   padding-top: 5px;
   width: -webkit-fill-available;
-  padding: 0 20px;
 }
 
 .rating-section {
