--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -56,7 +56,7 @@
 /* ==== Dropdown cấp 1 ==== */
 .dropdown {
   position:absolute;
-  top: 50% !important;
+  top: 40% !important;
   left: 0;
   background: #555;
   color: #fff;
@@ -99,16 +99,16 @@
 
 /* Mục trong dropdown */
 .dropdown-item {
-  padding: 10px 16px;
-  border-bottom: 1px solid rgba(255,255,255,0.2);
+  padding: 10px 16px !important;
+  border-bottom: 1px solid rgba(255,255,255,0.2) !important;
   cursor: pointer;
   transition: all 0.3s ease;
   position: relative;
 }
 
 .dropdown-item:hover {
-  background: #333;
-  padding-left: 20px;
+  background: #333 !important;
+  padding-left: 20px !important;
 }
 
 /* ==== Dropdown cấp 2 ==== */
