--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -68,6 +68,7 @@
 .add-item
 {
     border: black solid 1px;
+    border-radius: 10px;
     padding: 20px;
 }
 @media screen and (max-width: 600px){
